# arm-crypto-engine

./: CMakeLists.txt  LICENSE  Makefile  README.md
bench/: bench_crypto.c
cmake/: toolchain-aarch64.cmake  toolchain-arm-none-eabi.cmake
docs/: api_reference.md
docs/security/: ct_checklist.md  threat_model.md
examples/sd_encrypt/: main.c  sd_crypto.c  sd_crypto.h
examples/secure_boot_demo/: app_verify.c  app_verify.h  bootloader.c
examples/uart_cli/: commands.c  commands.h  main.c
include/armcrypto/: aes.h  ct.h  sha256.h  types.h
platform/rpi/: platform.c  platform.h
platform/stm32f4/: platform.c  platform.h
platform/stm32f4/linker/: stm32f4.ld
scripts/: asm_style.py  build.py  test_vectors.py
src/asm/: aes_cortex_a53.s  aes_cortex_m4.s  sha256_cortex_a53.s  sha256_cortex_m4.s
src/c/: aes.c  ct_utils.c  sha256.c
tests/fuzz/: fuzz_aes.c
tests/unit/: test_aes.c  test_ct.c  test_sha256.c
tests/vectors/: aes_vectors.h  sha256_vectors.h
